# pure_grpo_trainer

./: README.md  pyproject.toml
src/pure_grpo_trainer/trainer/: config.py  trainer.py  utils.py
